# torizon-qt6-diagnostics

./: CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  README.md  docker-compose.yml  main.cpp  torizonqt6diagnostics.pro.qtds
.conf/: metadata.json
QML/: main.qml
include/: diagnostics_model.hpp  i2c_bus.hpp
src/: diagnostics_model.cpp  i2c_bus.cpp
